Mudança de realocação de pastas!

--- a/ProjetoSiteAndroid/css/styleHome.css
+++ b/ProjetoSiteAndroid/css/styleHome.css
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family:'idroid';
-  src: url('/fontes/idroid.otf') format(opentype);
+  src: url('/Meus-Projetos/ProjetoSiteAndroid/fontes/idroid.otf') format(opentype);
   font-weight: normal;
   font-style: normal;
 }
